# particle-simulation

./: .clang-format  .gitignore  CMakeLists.txt
include/glad/: glad.h
shaders/: vertex.vert
src/: Application.cpp  Application.h  Input.cpp  Input.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Random.h  Renderer.cpp  Renderer.h  ScopedTimer.h  Settings.h  Shader.cpp  Shader.h  SimulationParams.h  UI.cpp  UI.h  Window.cpp  Window.h  glad.c  main.cpp
src/OpenGL/: VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
